--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ plugins:
 permalink: /:year/:month/:day/:title/
 paginate_path: /posts/:num/
 paginate: 5
-comments: on
+comments: off
 
 jekyll-archives:
   enabled:
